Commit current ridiculousness

--- a/client/index.html
+++ b/client/index.html
@@ -1,2 +1,24 @@
+<style>
+#graph{
+    background-color: black;
+    color: white;
+    padding: 1em;
+    margin:  0.5em;
+}
+
+.Node{
+    background-color: blue;
+    color: white;
+    border: 2px solid grey;
+}
+</style>
+<script>
+var current_port = false;
+var port_click   = function(direction, id){
+    console.log("graph not loaded yet");
+}
+</script>
+
 <script src="require1k.min.js" data-main="./main"></script>
 <h1>It works!</h1>
+<div id="graph"></div>
