--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,9 @@
         <meta charset="utf-8">
         <title>NodeGraph Editor</title>
         <link rel="stylesheet" href="index.css"></link>
+        <script src="d3.v4.js"></script>
     </head>
     <body>
-        <h1>It works!</h1>
-        <div id="graph"></div>
-        <div id="links-list"></div>
     </body>
-    <script src="d3.v5.min.js"></script>
-    <script src="require1k.min.js" data-main="./main"></script>
+    <script src="main.js"></script>
 </html>
