--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>NodeGraph Editor</title>
+        <title>Graph Editor</title>
         <link rel="stylesheet" href="index.css"></link>
-        <script src="d3.v4.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
     </head>
     <body>
     </body>
