Partially working UI

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Graph Editor</title>
         <link rel="stylesheet" href="index.css"></link>
-        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="/d3.v4.js"></script>
     </head>
     <body>
     </body>
