--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,10 @@
         <meta charset="utf-8">
         <title>Graph Editor</title>
         <link rel="stylesheet" href="index.css"></link>
+        <script src="/main.js"></script>
         <script src="/d3.v4.js"></script>
     </head>
     <body>
     </body>
-    <script src="main.js"></script>
+    <script>main()</script>
 </html>
